# gen-ai

./: .gitignore  README.md  context_engineering.ipynb  pyproject.toml  rag_financial_statements_analysis.ipynb  tech_support_agent.ipynb  todo_agent.ipynb
.github/workflows/: excel-agent-platform-ci.yml
excel-agent-platform/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
excel-agent-platform/backend/: Dockerfile  clean_artifacts.py  pyproject.toml
excel-agent-platform/backend/app/: __init__.py  config.py  main.py  process.py
excel-agent-platform/backend/app/agents/: __init__.py  plan_validator.py  planner.py  router.py  validator.py
excel-agent-platform/backend/app/api/: error_responses.py  health.py  runs.py
excel-agent-platform/backend/app/executors/: __init__.py  common.py  distance.py  formula.py  group_share.py  lookup.py
excel-agent-platform/backend/app/graph/: builder.py  nodes.py  state.py
excel-agent-platform/backend/app/schemas/: __init__.py  dsl.py  errors.py  evidence.py  run.py  task_plan.py  workbook.py
excel-agent-platform/backend/app/services/: chroma_memory.py  file_store.py  mcp_gateway.py  operation_resolver.py  run_store.py  runner.py  sqlite_store.py
excel-agent-platform/backend/app/tools/: __init__.py  local_calc.py  local_excel.py  local_search.py  local_source.py
excel-agent-platform/backend/data/seeds/: capitals.json  mountains.json
excel-agent-platform/data/: cities.xlsx  companies.xlsx
excel-agent-platform/docs/: 01_mcp_tools.md  02_backend_graph.md  03_tests_and_eval.md  04_runbook.md
excel-agent-platform/docs/adr/: ADR-001-langgraph-orchestration.md  ADR-002-mcp-tool-boundary.md  ADR-003-safe-dsl.md  ADR-004-structured-source-first.md  ADR-005-approval-and-fail-closed.md  ADR-006-live-provider-health.md
excel-agent-platform/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
excel-agent-platform/frontend/src/: App.tsx  apiClient.ts  styles.css
excel-agent-platform/mcp_servers/calc_server/: server.py
excel-agent-platform/mcp_servers/excel_server/: server.py
excel-agent-platform/mcp_servers/search_server/: server.py
excel-agent-platform/mcp_servers/source_server/: server.py
excel-agent-platform/tests/: conftest.py
excel-agent-platform/tests/api/: test_runs_api.py
excel-agent-platform/tests/contracts/: test_fact_contract.py
excel-agent-platform/tests/e2e/: playwright_math_smoke.cjs  playwright_smoke.cjs  (+2 more)
(+16 files in other folders)
