[tool.poetry]
name = "gen-ai"
version = "0.1.0"
description = "Generative and Agentic AI"
authors = ["econolic"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "^2.26.0"
dotenv = "^0.9.9"
ipykernel = "^7.2.0"
langchain-openai = "^1.2.1"
langchain = "^1.3.0"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.2"
chromadb = "^1.5.9"
python-dotenv = "^1.2.2"
pydantic = "^2.13.4"
langchain-tavily = "^0.2.18"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
