[project]
name = "excel-agent-platform-backend"
version = "0.1.0"
description = "FastAPI + LangGraph Excel enrichment backend"
requires-python = ">=3.11"
authors = [{name = "Excel Agent Platform"}]
dependencies = [
  "fastapi>=0.115.0,<0.136.0",
  "starlette>=0.40.0,<1.0.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "httpx>=0.27.0,<1.0.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-mcp-adapters>=0.1.0",
  "mcp[cli]>=1.9.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.0,<0.136.0"
starlette = ">=0.40.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
python-multipart = ">=0.0.9"
pydantic = ">=2.8.0"
pydantic-settings = ">=2.4.0"
pandas = ">=2.2.0"
openpyxl = ">=3.1.0"
httpx = ">=0.27.0,<1.0.0"
langgraph = ">=0.2.0"
langchain = ">=0.3.0"
langchain-openai = ">=0.2.0"
langchain-mcp-adapters = ">=0.1.0"
mcp = {extras = ["cli"], version = ">=1.9.0"}
redis = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.6.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
